# cortex-labs

./: .gitignore  0)  CHANGELOG.md  Number.isFinite(value)))  README.md  THIRD_PARTY_NOTICES.md  colorpalette.md  diff.patch  fix-css.ps1  index.html  m  maxX  package.json  replace_buttons.cjs  replace_buttons2.cjs  replace_buttons3.cjs  tailwind.config.js  tmp.ps1  tmp_checkexp.cjs  tmp_match_app.ps1  tmp_read_lines.cmd  tmp_read_lines.js  vite.config.js  {
.agents/artifacts/: pdn-overhaul-plan.md
.bun-cache/: 36b2146ccfaa884e.npm  3f8dcafcabe57521.npm  cafaeffe009c5257.npm  e69a48e8db1b29cf.npm
.github/workflows/: release.yml
.opencode/plans/: 1771988833125-crisp-circuit.md  1771989030654-kind-planet.md
docs/: spatial-coloring-upgrade.md  yft-cli-contract.md
docs/site/: README.md  package.json
public/shared-ytd/: manifest.json
src/: App.jsx  App.jsx.new  Shell.jsx  changelog.md  index.css  main.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppLoader.jsx  BugReportModal.jsx  ContextMenu.jsx  CyberUI.jsx  DualModelViewer.jsx  HomePage.jsx  HotkeyInput.jsx  Onboarding.jsx  SettingsMenu.jsx  TemplateGenerationPage.jsx  VariantsPage.jsx  Viewer.jsx  Walkthrough.jsx  WhatsNew.jsx  YtdBrowser.jsx
src/lib/: bc7.js  bug-report.js  camera-framing.js  camera-state.js  changelog.js  console-log-buffer.js  dds.js  hotkeys.js  model-normalization.js  pdn.js  (+20 more)
tools/: generate-latest-json.mjs  tauri-wrapper.mjs  uv_island_gradient.py
(+52 files in other folders)
